@@ -19,11 +19,9 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.locks.StampedLock;
-import java.util.stream.Collectors;
 
 import org.apiguardian.api.API;
 import org.springframework.lang.NonNull;
@@ -66,7 +64,7 @@ public final class NestedRelationshipProcessingStateMachine {
 	 * A map pointing from a processed object to the internal id.
 	 * This will be useful during the persistence to avoid another DB network round-trip.
 	 */
-	private final Map<Integer, Long> processedObjectsIds = new HashMap<>();
+	private final Map<Integer, String> processedObjectsIds = new HashMap<>();
 
 	public NestedRelationshipProcessingStateMachine(final Neo4jMappingContext mappingContext) {
 
@@ -75,22 +73,24 @@ public final class NestedRelationshipProcessingStateMachine {
 		this.mappingContext = mappingContext;
 	}
 
-	public NestedRelationshipProcessingStateMachine(final Neo4jMappingContext mappingContext, Object initialObject, Long internalId) {
+	public NestedRelationshipProcessingStateMachine(final Neo4jMappingContext mappingContext, Object initialObject, String elementId) {
 		this(mappingContext);
 
 		Assert.notNull(initialObject, "Initial object must not be null");
-		Assert.notNull(internalId, "The initial objects internal ID must not be null");
+		Assert.notNull(elementId, "The initial objects element ID must not be null");
 
-		storeHashedVersionInProcessedObjectsIds(initialObject, internalId);
+		storeHashedVersionInProcessedObjectsIds(initialObject, elementId);
 	}
 
 	/**
 	 * @param relationshipDescription Check whether this relationship description has been processed
-	 * @param valuesToStore Check whether all the values in the collection have been processed
+	 * @param valuesToStore           Check whether all the values in the collection have been processed
 	 * @return The state of things processed
 	 */
-	public ProcessState getStateOf(Object fromId, RelationshipDescription relationshipDescription, @Nullable Collection<?> valuesToStore) {
-
+	public ProcessState getStateOf(@Nullable Object fromId, RelationshipDescription relationshipDescription, @Nullable Collection<?> valuesToStore) {
+		if (fromId == null) {
+			return ProcessState.PROCESSED_BOTH;
+		}
 		final long stamp = lock.readLock();
 		try {
 			boolean hasProcessedRelationship = hasProcessedRelationship(fromId, relationshipDescription);
@@ -116,31 +116,7 @@ public final class NestedRelationshipProcessingStateMachine {
 	 * can get processed for different objects of the same entity.
 	 * One could say that this is a Tuple but it has a nicer name.
 	 */
-	private static class RelationshipDescriptionWithSourceId {
-		private final Object id;
-		private final RelationshipDescription relationshipDescription;
-
-		RelationshipDescriptionWithSourceId(Object id, RelationshipDescription relationshipDescription) {
-			this.id = id;
-			this.relationshipDescription = relationshipDescription;
-		}
-
-		@Override
-		public boolean equals(Object o) {
-			if (this == o) {
-				return true;
-			}
-			if (o == null || getClass() != o.getClass()) {
-				return false;
-			}
-			RelationshipDescriptionWithSourceId that = (RelationshipDescriptionWithSourceId) o;
-			return id.equals(that.id) && relationshipDescription.equals(that.relationshipDescription);
-		}
-
-		@Override
-		public int hashCode() {
-			return Objects.hash(id, relationshipDescription);
-		}
+	private record RelationshipDescriptionWithSourceId(Object id, RelationshipDescription relationshipDescription) {
 	}
 
 	/**
@@ -165,24 +141,24 @@ public final class NestedRelationshipProcessingStateMachine {
 	 * Marks the passed objects as processed
 	 *
 	 * @param valueToStore If not {@literal null}, all non-null values will be marked as processed
-	 * @param internalId The internal id of the value processed
+	 * @param elementId    The internal id of the value processed
 	 */
-	public void markValueAsProcessed(Object valueToStore, Long internalId) {
+	public void markEntityAsProcessed(Object valueToStore, String elementId) {
 
 		final long stamp = lock.writeLock();
 		try {
-			doMarkValueAsProcessed(valueToStore, internalId);
+			doMarkValueAsProcessed(valueToStore, elementId);
 			storeProcessedInAlias(valueToStore, valueToStore);
 		} finally {
 			lock.unlock(stamp);
 		}
 	}
 
-	private void doMarkValueAsProcessed(Object valueToStore, Long internalId) {
+	private void doMarkValueAsProcessed(Object valueToStore, String elementId) {
 
 		Object value = extractRelatedValueFromRelationshipProperties(valueToStore);
-		storeHashedVersionInProcessedObjectsIds(valueToStore, internalId);
-		storeHashedVersionInProcessedObjectsIds(value, internalId);
+		storeHashedVersionInProcessedObjectsIds(valueToStore, elementId);
+		storeHashedVersionInProcessedObjectsIds(value, elementId);
 	}
 
 	/**
@@ -204,6 +180,7 @@ public final class NestedRelationshipProcessingStateMachine {
 				Neo4jPersistentEntity<?> entity = mappingContext.getRequiredPersistentEntity(typeOfValue);
 				Neo4jPersistentProperty idProperty = entity.getIdProperty();
 				Object id = idProperty == null ? null : entity.getPropertyAccessor(valueToCheck).getProperty(idProperty);
+
 				// After the lookup by system.identityHashCode failed for a processed object alias,
 				// we must traverse or iterate over all value with the matching type and compare the domain ids
 				// to figure out if the logical object has already been processed through a different object instance.
@@ -214,7 +191,7 @@ public final class NestedRelationshipProcessingStateMachine {
 						.findAny();
 				if (alreadyProcessedObject.isPresent()) { // Skip the show the next time around.
 					processed = true;
-					Long internalId = getInternalId(alreadyProcessedObject.get());
+					String internalId = getObjectId(alreadyProcessedObject.get());
 					if (internalId != null) {
 						stamp = lock.tryConvertToWriteLock(stamp);
 						doMarkValueAsProcessed(valueToCheck, internalId);
@@ -245,26 +222,32 @@ public final class NestedRelationshipProcessingStateMachine {
 		return false;
 	}
 
-	public void markValueAsProcessedAs(Object valueToStore, Object bean) {
+	public void markAsAliased(Object aliasEntity, Object entityOrId) {
 		final long stamp = lock.writeLock();
 		try {
-			storeProcessedInAlias(valueToStore, bean);
+			storeProcessedInAlias(aliasEntity, entityOrId);
 		} finally {
 			lock.unlock(stamp);
 		}
 	}
 
+	/**
+	 * This returns an id for the given object. We deliberate use the wording of a generic object id as that might either be
+	 * the Neo4j 5+ {@literal elementId()} or on older Neo4j versions or with older data modules {@code toString(id())}.
+	 *
+	 * @param object The object for which an id is requested
+	 * @return The objects id
+	 */
 	@Nullable
-	public Long getInternalId(Object object) {
+	public String getObjectId(Object object) {
 		final long stamp = lock.readLock();
 		try {
 			Object valueToCheck = extractRelatedValueFromRelationshipProperties(object);
-			Long possibleId = getProcessedObjectIds(valueToCheck);
+			String possibleId = getProcessedObjectIds(valueToCheck);
 			return possibleId != null ? possibleId : getProcessedObjectIds(getProcessedAs(valueToCheck));
 		} finally {
 			lock.unlock(stamp);
 		}
-
 	}
 
 	public Object getProcessedAs(Object entity) {
@@ -278,7 +261,7 @@ public final class NestedRelationshipProcessingStateMachine {
 	}
 
 	@Nullable
-	private Long getProcessedObjectIds(@Nullable Object entity) {
+	private String getProcessedObjectIds(@Nullable Object entity) {
 		if (entity == null) {
 			return null;
 		}
@@ -299,27 +282,27 @@ public final class NestedRelationshipProcessingStateMachine {
 	/*
 	 * Convenience wrapper functions to avoid exposing the System.identityHashCode "everywhere" in this class.
 	 */
-	private void storeHashedVersionInProcessedObjectsIds(Object initialObject, Long internalId) {
-		processedObjectsIds.put(System.identityHashCode(initialObject), internalId);
+	private void storeHashedVersionInProcessedObjectsIds(Object initialObject, String elementId) {
+		processedObjectsIds.put(System.identityHashCode(initialObject), elementId);
 	}
 
-	private void storeProcessedInAlias(Object valueToStore, Object bean) {
-		processedObjectsAlias.put(System.identityHashCode(valueToStore), bean);
+	private void storeProcessedInAlias(Object aliasEntity, Object targetEntity) {
+		processedObjectsAlias.put(System.identityHashCode(aliasEntity), targetEntity);
 	}
 
 	private Object getProcessedAsWithDefaults(Object entity) {
 		return processedObjectsAlias.getOrDefault(System.identityHashCode(entity), entity);
 	}
 
-	private boolean hasProcessed(Object valueToCheck) {
-		return processedObjectsAlias.containsKey(System.identityHashCode(valueToCheck));
+	private boolean hasProcessed(Object entity) {
+		return processedObjectsAlias.containsKey(System.identityHashCode(entity));
 	}
 
-	private boolean hasProcessedAllOf(@Nullable Collection<?> valuesToStore) {
+	private boolean hasProcessedAllOf(@Nullable Collection<?> entities) {
 		// there can be null elements in the unified collection of values to store.
-		if (valuesToStore == null) {
+		if (entities == null) {
 			return false;
 		}
-		return processedObjectsIds.keySet().containsAll(valuesToStore.stream().map(System::identityHashCode).collect(Collectors.toList()));
+		return processedObjectsIds.keySet().containsAll(entities.stream().map(System::identityHashCode).toList());
 	}
 }
